Fix more block spacing

--- a/themes/the-equity-fund/static/scss/app.css
+++ b/themes/the-equity-fund/static/scss/app.css
@@ -342,12 +342,12 @@
     }
 
     /* Space between blocks is different */
-    > *[data-block]:not(:first-child) {
+    > [data-block] {
       @apply mt-10 md:mt-16;
     }
-
     /* No space between colored blocks */
-    > [data-block]:not(.palette-cream) + [data-block]:not(.palette-cream) {
+    > [data-block]:not(.palette-cream) + [data-block]:not(.palette-cream),
+    > [data-block]:not(.palette-cream):first-child {
       @apply !mt-0;
     }
 
